ng material, sidebar, climbing area list

--- a/src/app/pages/dashboard/sidebar/sidebar.component.html
+++ b/src/app/pages/dashboard/sidebar/sidebar.component.html
@@ -1,1 +1,49 @@
-<p>sidebar works!</p>
+<mat-drawer-container class="sidenav__container">
+  <mat-drawer mode="side" opened>
+    <div class="sidenav__title">
+      <h2>Friction Report</h2>
+    </div>
+    <mat-accordion multi>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Tennessee
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
+          <p *ngIf="area.state==='TN'">{{area.name}}</p>
+        </div>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Alabama
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
+          <p *ngIf="area.state==='AL'">{{area.name}}</p>
+        </div>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Georgia
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
+          <p *ngIf="area.state==='GA'">{{area.name}}</p>
+        </div>
+      </mat-expansion-panel>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            North Carolina
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
+          <p *ngIf="area.state==='NC'">{{area.name}}</p>
+        </div>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </mat-drawer>
+</mat-drawer-container>
