sidebar changes, retrieve data from backend

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<p>dashboard works!</p>
+<div class="dashboard">
+  <friction-sidebar/>
+  <div class="dashboard__content">
+    <p>{{weather.mountainProjectUrl}}</p>
+  </div>
+</div>
