--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,9 +11,9 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a href="#" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" routerLinkActive="active" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='TN'">
-              <p>- {{area.name}}</p>
+              <p class="sidenav__subpanel_text">{{area.name}}</p>
             </div>
           </a>
         </ng-container>
@@ -25,9 +25,9 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a href="#" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='AL'">
-              <p>- {{area.name}}</p>
+              <p>{{area.name}}</p>
             </div>
           </a>
         </ng-container>
@@ -39,9 +39,9 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a href="#" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='GA'">
-              <p>- {{area.name}}</p>
+              <p>{{area.name}}</p>
             </div>
           </a>
         </ng-container>
@@ -53,9 +53,9 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a href="#" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='KY'">
-              <p>- {{area.name}}</p>
+              <p>{{area.name}}</p>
             </div>
           </a>
         </ng-container>
@@ -67,9 +67,9 @@
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a href="#" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='NC'">
-              <p>- {{area.name}}</p>
+              <p>{{area.name}}</p>
             </div>
           </a>
         </ng-container>
