sendex values and hourly sendex chart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="main">
     <friction-sidebar/>
-    <router-outlet></router-outlet>
+    <div class="main__content">
+      <router-outlet></router-outlet>
+    </div>
 </div>
