--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,9 +1,55 @@
+@import "../../scss/_variables";
+
 .dashboard{
   height: 100%;
+  width: 100%;
   display: flex;
-  padding: 1rem;
-}
+  padding: 2rem;
+  flex: 1 1 auto;
+  flex-direction: column;
+  align-items: center;
+  color: $text-color-main;
 
-p {
-  color: white;
+  &__title {
+    display: flex;
+    width: 90%;
+    align-items: center;
+    justify-content: start;
+    padding-bottom: 3rem;
+    height: fit-content;
+
+    &-link {
+      display: flex;
+      justify-content: baseline;
+      color: $accent-color;
+      margin: 0;
+    }
+
+    &-text {
+      padding-right: 1rem;
+      margin: 0;
+      font-size: 4rem;
+    }
+  }
+
+  &__sendex-values {
+    padding: 2rem 0;
+    display: flex;
+    background: $background-color-accent;
+    border-radius: 16px;
+    width: 90%;
+    justify-content: space-evenly;
+
+    friction-sendex-value {
+      width: 30%;
+    }
+  }
+
+  &__graphs {
+    display: flex;
+    width: 90%;
+    justify-content: space-evenly;
+    padding: 2rem 0;
+  }
+
 }
