--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="sidenav__container">
+<mat-drawer-container class="sidenav">
   <mat-drawer mode="side" opened="true">
     <div class="sidenav__title">
       <h2>Friction Report</h2>
