--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,20 @@
 <div class="dashboard">
-  <div  *ngIf="area">
-    <p>The temperature at {{area.areaName}} is currently {{area.current.temp}}</p>
-    <p>{{area.mountainProjectUrl}}</p>
-  </div>
+  <ng-container  *ngIf="area">
+    <div class="dashboard__title">
+      <h1 class="dashboard__title-text">{{area.areaName}}</h1>
+      <a href="{{area.mountainProjectUrl}}" target="_blank" class="dashboard__title-link">
+        <mat-icon svgIcon="open_in_new"/>
+      </a>
+    </div>
+    <div class="dashboard__sendex-values">
+      <friction-sendex-value title="Today" [index]="0"/>
+      <friction-sendex-value title="Tomorrow" [index]="1"/>
+      <friction-sendex-value title="Day After" [index]="2"/>
+    </div>
+    <div class="dashboard__graphs">
+      <friction-hourly-graph/>
+      <friction-weekly-graph/>
+      <friction-weekly-forecast/>
+    </div>
+  </ng-container>
 </div>
