pretty colors and weekly chart

--- a/src/app/components/hourly-graph/hourly-graph.component.html
+++ b/src/app/components/hourly-graph/hourly-graph.component.html
@@ -2,7 +2,7 @@
   <div class="chart__title">
     <h2>Hourly Sendex</h2>
   </div>
-  <div class="chart__content">
+  <div class="chart__content dark">
     <ngx-charts-line-chart
     [results]="hourlySendexValues"
     [xAxis]="xAxis"
