--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -1,4 +1,21 @@
-$accent-color:#FE1F27;
-$text-color-main: white;
-$background-color: #1e1e1e;
-$background-color-accent: #424242;
+$accent-color:#a8385d;
+//DARK
+/**
+* Backgrounds
+*/
+$color-bg-darkest: #13141b;
+$color-bg-darker: #1b1e27;
+$color-bg-dark: #232837;
+$color-bg-med: #2f3646;
+$color-bg-light: #455066;
+$color-bg-lighter: #5b6882;
+
+/**
+  * Text
+  */
+$color-text-dark: #72809b;
+$color-text-med-dark: #919db5;
+$color-text-med: #A0AABE;
+$color-text-med-light: #d9dce1;
+$color-text-light: #f0f1f6;
+$color-text-lighter: #fff;
