--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
   font-size: 1.6rem;
   height: 100%;
   display: flex;
-  background-color: $background-color;
+  background-color: $color-bg-darkest;
 
   &__content {
     flex: 1 1 auto;
