--- a/src/app/components/hourly-graph/hourly-graph.component.scss
+++ b/src/app/components/hourly-graph/hourly-graph.component.scss
@@ -1,12 +1,16 @@
 @import "../../scss/variables";
 
 .chart {
-  background-color: $background-color-accent;
+  background-color: $color-bg-med;
   border-radius: 20px;
 
   &__title{
     display: flex;
     justify-content: center;
     padding: 1rem 0;
+  }
+
+  &__content {
+    border-radius: 20px;
   }
 }
