--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,12 +1,12 @@
 <mat-drawer-container class="sidenav">
-  <mat-drawer mode="side" opened="true">
+  <mat-drawer mode="side" opened="true" class="sidenav__content">
     <div class="sidenav__title">
       <h2>Friction Report</h2>
     </div>
     <mat-accordion multi>
       <mat-expansion-panel class="sidenav__panel">
         <mat-expansion-panel-header class="sidenav__header">
-          <mat-panel-title>
+          <mat-panel-title class="sidenav__header_text">
             Tennessee
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -18,58 +18,58 @@
           </a>
         </ng-container>
       </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
+      <mat-expansion-panel class="sidenav__panel">
+        <mat-expansion-panel-header class="sidenav__header">
+          <mat-panel-title class="sidenav__header_text">
             Alabama
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a routerLink="{{area.apiName}}" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" routerLinkActive="active" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='AL'">
-              <p>{{area.name}}</p>
+              <p class="sidenav__subpanel_text">{{area.name}}</p>
             </div>
           </a>
         </ng-container>
       </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
+      <mat-expansion-panel class="sidenav__panel">
+        <mat-expansion-panel-header class="sidenav__header">
+          <mat-panel-title class="sidenav__header_text">
             Georgia
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a routerLink="{{area.apiName}}" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" routerLinkActive="active" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='GA'">
-              <p>{{area.name}}</p>
+              <p class="sidenav__subpanel_text">{{area.name}}</p>
             </div>
           </a>
         </ng-container>
       </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
+      <mat-expansion-panel class="sidenav__panel">
+        <mat-expansion-panel-header class="sidenav__header">
+          <mat-panel-title class="sidenav__header_text">
             Kentucky
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a routerLink="{{area.apiName}}" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" routerLinkActive="active" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='KY'">
-              <p>{{area.name}}</p>
+              <p class="sidenav__subpanel_text">{{area.name}}</p>
             </div>
           </a>
         </ng-container>
       </mat-expansion-panel>
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>
+      <mat-expansion-panel class="sidenav__panel">
+        <mat-expansion-panel-header class="sidenav__header">
+          <mat-panel-title class="sidenav__header_text">
             North Carolina
           </mat-panel-title>
         </mat-expansion-panel-header>
         <ng-container *ngFor="let area of climbingAreas; index as i; trackBy:areaByName">
-          <a routerLink="{{area.apiName}}" class="sidenav__link">
+          <a routerLink="{{area.apiName}}" routerLinkActive="active" class="sidenav__link">
             <div class="sidenav__subpanel" *ngIf="area.state==='NC'">
-              <p>{{area.name}}</p>
+              <p class="sidenav__subpanel_text">{{area.name}}</p>
             </div>
           </a>
         </ng-container>
