--- a/src/app/components/weekly-graph/weekly-graph.component.html
+++ b/src/app/components/weekly-graph/weekly-graph.component.html
@@ -10,11 +10,11 @@
     [showXAxisLabel]="showXAxisLabel"
     [showYAxisLabel]="showYAxisLabel"
     [xAxisLabel]="xAxisLabel"
-    [yAxisLabel]="yAxisLabel"
     [autoScale]="autoScale"
     [yScaleMin]="yScaleMin"
     [yScaleMax]="yScaleMax"
     [showGridLines]="showGridLines"
+    [legend]="legend"
     />
   </div>
 </div>
