--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -19,6 +19,8 @@
     <div class="dashboard__graphs">
       <friction-hourly-graph/>
       <friction-weekly-graph/>
+    </div>
+    <div class="dashboard__forecast">
       <friction-weekly-forecast/>
     </div>
   </ng-container>
