--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,9 +1,86 @@
+@import "../../scss/_variables";
+
 .dashboard{
   height: 100%;
+  width: 100%;
   display: flex;
-  padding: 1rem;
-}
+  padding: 2rem;
+  flex: 1 1 auto;
+  flex-direction: column;
+  align-items: center;
+  color: $color-text-light;
 
-p {
-  color: white;
+  &__title {
+    display: flex;
+    width: 90%;
+    align-items: center;
+    justify-content: flex-start;
+    padding-bottom: 3rem;
+    height: fit-content;
+
+    &_link {
+      display: flex;
+      justify-content: baseline;
+      color: $color-accent-light;
+      margin: 0;
+    }
+
+    &_text {
+      padding-right: 1rem;
+      margin: 0;
+      font-size: 4rem;
+    }
+  }
+
+
+  &__sendex{
+    width: 90%;
+    background: $color-bg-med;
+    display: flex;
+    flex-direction: column;
+    border-radius: 16px;
+
+    &_title {
+      padding-left: 2.4%;
+      padding-top: 1rem;
+
+      h2 {
+        font-size: 3rem;
+        margin: 0;
+      }
+    }
+
+    &_values {
+      padding: 2rem 0;
+      display: flex;
+      width: 100%;
+      justify-content: space-evenly;
+
+      friction-sendex-value {
+        width: 30%;
+      }
+    }
+
+  }
+
+  &__graphs {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: space-between;
+    padding: 2rem 0;
+
+    friction-hourly-graph {
+      width: 49%;
+    }
+
+    friction-weekly-graph {
+      width: 49%;
+    }
+  }
+
+  &__forecast {
+    width: 90%;
+  }
+
 }
