--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,27 @@
 <div class="dashboard">
-  <div  *ngIf="area">
-    <p>The temperature at {{area.areaName}} is currently {{area.current.temp}}</p>
-    <p>{{area.mountainProjectUrl}}</p>
-  </div>
+  <ng-container  *ngIf="area">
+    <div class="dashboard__title">
+      <h1 class="dashboard__title_text">{{area.areaName}}</h1>
+      <a href="{{area.mountainProjectUrl}}" target="_blank" class="dashboard__title_link">
+        <mat-icon svgIcon="open_in_new"/>
+      </a>
+    </div>
+    <div class="dashboard__sendex">
+      <div class="dashboard__sendex_title">
+        <h2>Sendex</h2>
+      </div>
+      <div class="dashboard__sendex_values">
+        <friction-sendex-value title="Today" [index]="0"/>
+        <friction-sendex-value title="Tomorrow" [index]="1"/>
+        <friction-sendex-value title="Day After" [index]="2"/>
+      </div>
+    </div>
+    <div class="dashboard__graphs">
+      <friction-hourly-graph/>
+      <friction-weekly-graph/>
+    </div>
+    <div class="dashboard__forecast">
+      <friction-weekly-forecast/>
+    </div>
+  </ng-container>
 </div>
