chart curve type, css media queries

--- a/src/app/components/hourly-graph/hourly-graph.component.html
+++ b/src/app/components/hourly-graph/hourly-graph.component.html
@@ -15,6 +15,7 @@
     [yScaleMin]="yScaleMin"
     [yScaleMax]="yScaleMax"
     [showGridLines]="showGridLines"
+    [curve]="curve"
     />
   </div>
 </div>
