--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="sidenav">
-  <mat-drawer mode="side" opened="true" class="sidenav__content">
+  <mat-drawer mode="side" [opened]="opened" class="sidenav__content">
     <div class="sidenav__title">
       <h2>Friction Report</h2>
     </div>
@@ -77,3 +77,4 @@
     </mat-accordion>
   </mat-drawer>
 </mat-drawer-container>
+
