--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,9 +2,13 @@
 
 .main {
   font-size: 1.6rem;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   background-color: $color-bg-darkest;
+
+  @media (max-width: 705px){
+    width: fit-content;
+  }
 
   &__content {
     flex: 1 1 auto;
