--- a/src/app/components/weekly-graph/weekly-graph.component.html
+++ b/src/app/components/weekly-graph/weekly-graph.component.html
@@ -15,6 +15,8 @@
     [yScaleMax]="yScaleMax"
     [showGridLines]="showGridLines"
     [legend]="legend"
+    [curve]="curve"
+    [legendPosition]="legendPosition"
     />
   </div>
 </div>
