--- a/src/app/components/weekly-forecast/weekly-forecast.component.html
+++ b/src/app/components/weekly-forecast/weekly-forecast.component.html
@@ -7,7 +7,7 @@
     <ng-container *ngFor="let day of area.daily">
       <div class="forecast__day">
         <p class="forecast__day_item">{{day.dt*1000 | date:'ccc'}}</p>
-        <p class="forecast__day_item">{{day.weather[0].icon}}</p>
+        <mat-icon [svgIcon]="day.weather[0].icon | icon"/>
         <p class="forecast__day_item">{{day.temp.min | number: '1.0-0'}}&#730;</p>
         <hr class="forecast__day_item">
         <p class="forecast__day_item">{{day.temp.max | number: '1.0-0'}}&#730;</p>
