--- a/src/app/components/weekly-forecast/weekly-forecast.component.scss
+++ b/src/app/components/weekly-forecast/weekly-forecast.component.scss
@@ -36,6 +36,7 @@
 
     @media (max-width: 1180px){
       flex-direction: column;
+      align-items: center;
     }
   }
 
@@ -51,7 +52,9 @@
       flex-direction: row;
       border-right: none;
       border-bottom: 2px solid $color-text-dark;
-      justify-content: space-between;
+      justify-content: space-evenly;
+      width: 80%;
+      margin-top: 0;
 
       hr {
         display: none;
