--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard">
   <ng-container  *ngIf="area">
     <div class="dashboard__title">
-      <h1 class="dashboard__title_text">{{area.areaName}}</h1>
+      <h1 class="dashboard__title_text">{{area.name}}</h1>
       <a href="{{area.mountainProjectUrl}}" target="_blank" class="dashboard__title_link">
         <mat-icon svgIcon="open_in_new"/>
       </a>
