--- a/src/app/components/sendex-value/sendex-value.component.scss
+++ b/src/app/components/sendex-value/sendex-value.component.scss
@@ -14,11 +14,27 @@
     padding: 1rem;
     margin: 0;
     font-size: 3.5rem;
+
+    @media (max-width: 710px){
+      font-size: 3rem;
+    }
+
+    @media (max-width: 380px){
+      font-size: 2.5rem;
+    }
   }
 
   &__value {
     padding: 1rem;
     margin: 0;
     font-size: 3rem;
+
+    @media (max-width: 710px){
+      font-size: 3rem;
+    }
+
+    @media (max-width: 380px){
+      font-size: 2.5rem;
+    }
   }
 }
