--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,5 +1,10 @@
-<mat-drawer-container class="sidenav">
-  <mat-drawer mode="side" [opened]="opened" class="sidenav__content">
+<ng-container *ngIf="mode === 'over'">
+  <div class="sidenav__button" (click)="opened=!opened">
+    <mat-icon svgIcon="menu"/>
+  </div>
+</ng-container>
+<mat-sidenav-container class="sidenav" [hasBackdrop]="true">
+  <mat-sidenav mode='over' [opened]="opened" class="sidenav__content">
     <div class="sidenav__title">
       <h2>Friction Report</h2>
     </div>
@@ -21,6 +26,6 @@
         </mat-expansion-panel>
       </ng-container>
     </mat-accordion>
-  </mat-drawer>
-</mat-drawer-container>
+  </mat-sidenav>
+</mat-sidenav-container>
 
