--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -10,6 +10,7 @@ $color-bg-med: #2f3646;
 $color-bg-light: #455066;
 $color-bg-lighter: #5b6882;
 
+$color-bg-dark-tp: #232837FF; //applied explicitly in styles.scss for sidenav backdrop
 /**
   * Text
   */
