--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,3 +27,7 @@ body {
 .mat-drawer-backdrop.mat-drawer-shown {
   background-color: #23283750;
 }
+
+.leaflet-popup-content {
+  font-size: 14px !important;
+}
