--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="map"
  leaflet [leafletOptions]="options"
  [leafletLayers]="areaLayer"
- (leafletMapReady)="log($event)"
+ (leafletMapReady)="onMapReady($event)"
  ></div>
