sidebar button color

--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -23,7 +23,7 @@ mat-sidenav{
 
   &__button {
     position: fixed;
-    color: $color-text-light;
+    color: $color-accent-light;
     z-index: 999;
     padding: .5rem;
     transform: scale(1.1);
