--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -9,6 +9,7 @@
     <div class="dashboard__sendex">
       <div class="dashboard__sendex_title">
         <h2>Sendex</h2>
+        <app-sendex-info/>
       </div>
       <div class="dashboard__sendex_values">
         <friction-sendex-value title="Today" [index]="0"/>
