map button and sendex info

--- a/src/app/components/sendex-info/sendex-info-dialog.component.html
+++ b/src/app/components/sendex-info/sendex-info-dialog.component.html
@@ -3,10 +3,10 @@
     <p>Basic Sendex:</p>
   </div>
   <div class="info-dialog__content">
-    <code class="info-dialog__content_formula">2 * DewPoint + Humidity - MinTemp</code>
+    <code class="info-dialog__content_formula"><span class="info-dialog__content_formula_text"><span class="constant-color">2</span> * <span class="variable-color">DewPoint</span> + <span class="variable-color">Humidity</span> - <span class="variable-color">MinTemp</span></span></code>
+    <br/>
     <p class="info-dialog__content_description">
-      Generally, the lower the number, the better the conditions.
-      A Sendex of 100 is just about perfect as a general rule.
+      Generally, a Sendex of 100 is just about perfect conditions, however precipitation can skew this number.
     </p>
   </div>
 </div>
