sidenav hover color

--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -12,6 +12,7 @@ $color-bg-med: #2f3646;
 $color-bg-light: #455066;
 $color-bg-lighter: #5b6882;
 
+$color-bg-sidenav-hover: #25272e;
 $color-bg-dark-tp: #232837FF; //applied explicitly in styles.scss for sidenav backdrop
 /**
   * Text
