--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -1,4 +1,6 @@
 $color-accent-light:#a8385d;
+$color-variable: #F44747;
+$color-constant: #e5c07b;
 //DARK
 /**
 * Backgrounds
@@ -10,6 +12,7 @@ $color-bg-med: #2f3646;
 $color-bg-light: #455066;
 $color-bg-lighter: #5b6882;
 
+$color-bg-sidenav-hover: #25272e;
 $color-bg-dark-tp: #232837FF; //applied explicitly in styles.scss for sidenav backdrop
 /**
   * Text
